[gd_scene load_steps=3 format=2]

[ext_resource path="res://prefabs/items/item_component/item_component.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/items/tab_item/tab_item.gd" type="Script" id=3]

[node name="Tab" type="Panel"]
margin_right = 32.0
margin_bottom = 32.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemComponent" parent="." instance=ExtResource( 2 )]

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 185.0
margin_top = 173.0
margin_right = 452.0
margin_bottom = 241.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Rename"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 259.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="instantiated_draggable" from="ItemComponent" to="." method="_on_ItemComponent_instantiated_draggable"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
